--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" name="imageLoader"/>
 İsminiz (İsteğe bağlı): <input type="text" id="isim"/> <br/>
 <br>
-Zarflı zemin: <input type="checkbox" id="zarf">
+Zarflı zemin: <input type="checkbox" id="zarf"> Gölge yok: <input type="checkbox" id="golge">
 <br>
 <br>
 <canvas id="my-canvas" width="800" height="600"></canvas>
@@ -81,6 +81,17 @@ Zarflı zemin: <input type="checkbox" id="zarf">
     }
 
     function main() {
+
+        if(golge.checked == true) {
+            shadowBlur = 0;
+            shadowOffsetX = 0;
+            shadowOffsetY = 0;
+        }
+        else{
+            shadowBlur = 5;
+            shadowOffsetX = 1;
+            shadowOffsetY = 1
+        }
 
         imagesLoaded += 1;
 
@@ -184,9 +195,13 @@ Zarflı zemin: <input type="checkbox" id="zarf">
     var img2 = loadImage('pusula.png', main);
     var papers = loadImage('paper.png', main);
 
+
+    var golge = document.getElementById('golge');
+
     var shadowBlur = 5;
     var shadowOffsetX = 1;
     var shadowOffsetY = 1;
+
     var kimlik = null;
     var kimlikResimde = false;
     var isimResimde = false;
