--- a/index.html
+++ b/index.html
@@ -58,14 +58,20 @@
     </li>
 </ul>
 </p>
-<button id="bastan">Baştan başla</button>
-<a id="indir">İndir</a>
 Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" name="imageLoader"/>
-İsminiz (İsteğe bağlı): <input type="text" id="isim"/> <br/><br/>
+<br/><br/>
 
 Özel kağıt, resim, kartvizit yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader2" name="imageLoader2"/><br/>
 <br>
 Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkbox" id="golge">
+<br>
+<br>
+
+İsminiz (İsteğe bağlı): <input type="text" id="isim"/>
+<br>
+<br>
+<button id="bastan">Baştan başla</button>
+<a id="indir">İndir</a>
 <br>
 <br>
 <canvas id="my-canvas" width="800" height="600"></canvas>
