click should redraw canvas

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
                 extra.drawFunc = function(){ drawShadow(extra, '#000'); };
                 ozelResimde = true;
             }
+        drawCanvas();
         }, false);
 
         canvas.addEventListener('mousedown', function (evt) {
