--- a/index.html
+++ b/index.html
@@ -77,50 +77,6 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
 <canvas id="my-canvas" width="800" height="600"></canvas>
 </body>
 <script>
-    var canvas = document.getElementById("my-canvas");
-    var ctx = canvas.getContext("2d");
-    var imgs = [], grab;
-    var shadowBlur = 0, shadowOffsetX = 0, shadowOffsetY = 0;
-    /* x, y: coords. w, h: width, height.
-     * angle: rotation around origin. drag: can we drag this? loadedImage: Image, drawFunc: update function */
-    function Img(x, y, w, h, angle, drag, loadedImage){
-        this.x = x;
-        this.y = y;
-        this.w = w;
-        this.h = h;
-        this.angle = angle;
-        this.drag = drag;
-        this.loadedImage = loadedImage;
-        this.drawFunc = function(){ console.log("no drawFunc set", this); };
-        imgs.push(this);
-    }
-
-    function drawPlain(img){
-        ctx.save();
-        ctx.translate(img.x, img.y);
-        ctx.rotate(img.angle);
-        ctx.drawImage(img.loadedImage, 0, 0, img.w, img.h);
-        ctx.restore();
-    }
-
-    function drawShadow(img, shadowColor){
-        ctx.save();
-        ctx.translate(img.x, img.y);
-        ctx.rotate(img.angle);
-        ctx.shadowColor = shadowColor;
-        ctx.shadowBlur = shadowBlur;
-        ctx.shadowOffsetX = shadowOffsetX;
-        ctx.shadowOffsetY = shadowOffsetY;
-        ctx.drawImage(img.loadedImage, 0, 0, img.w, img.h);
-        ctx.restore();
-    }
-
-    function rotatePoint(x, y, theta){
-        var out = {};
-        out.x = Math.cos(theta) * x - Math.sin(theta) * y;
-        out.y = Math.sin(theta) * x + Math.cos(theta) * y;
-        return out;
-    }
 
     function loadImage(src, onload) {
         // http://www.thefutureoftheweb.com/blog/image-onload-isnt-being-called
@@ -133,32 +89,87 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     }
 
     function main() {
-        if(++imagesLoaded < 12) return;
-        
-        imgs = [];
-        var angle = Math.floor(Math.random() * 10);
-        
-        var bgImgs = [wood1, wood2, wood3, wood4, wood5, wood6, wood7, wood8];
-        oybackground = bgImgs[Math.floor(Math.random() * bgImgs.length)];
 
-        bg = new Img(-100, -100, oybackground.width, oybackground.height,
-            			5*Math.PI/180, false, oybackground);
-        bg.drawFunc = function(){ drawPlain(bg); };
-
-        var zarflizemin = document.getElementById('zarf');
-        if(zarflizemin.checked == true){
-            var angle24 = Math.floor(Math.random() * 10);
-            var d = angle24 * 20;
-            envelope = new Img(canvas.width/2 - zarf.width/2 + d, canvas.height/2 - zarf.height/2 + d,
-                					zarf.width, zarf.height, -angle24 * Math.PI/180, true, zarf);
-            envelope.drawFunc = function(){ drawShadow(envelope, '#000'); }
+        if(golge.checked == false) {
+            shadowBlur = 0;
+            shadowOffsetX = 0;
+            shadowOffsetY = 0;
+        }
+        else{
+            shadowBlur = 5;
+            shadowOffsetX = 1;
+            shadowOffsetY = 1
         }
 
-        ballot = new Img(canvas.width/2 - img2.width/2, canvas.height/2 - img2.height/2 - 50,
-            				img2.width, img2.height, angle*Math.PI/180, true, img2);
-        ballot.drawFunc = function(){ drawShadow(ballot, '#000'); }
+        imagesLoaded += 1;
 
-        drawCanvas();
+        if (imagesLoaded > 2) {
+            var angle = Math.floor(Math.random() * 10);
+
+            var select = Math.floor(Math.random() * 7);
+            if (select == 0) {
+                var oybackground = wood1;
+            }
+            else if (select == 1) {
+
+                var oybackground = wood2;
+            }
+            else if (select == 2) {
+                var oybackground = wood3;
+            }
+            else if (select == 3) {
+                var oybackground = wood4;
+            }
+            else if (select == 4) {
+                var oybackground = wood5;
+            }
+            else if (select == 5) {
+                var oybackground = wood6;
+            }
+            else if (select == 6) {
+                var oybackground = wood7;
+            }
+            else if (select == 7) {
+                var oybackground = wood8;
+            }
+
+            console.log(select);
+
+
+            // composite now
+            ctx.rotate(5 * Math.PI / 180);
+            ctx.drawImage(oybackground, -100, -100);
+            ctx.rotate(-5 * Math.PI / 180);
+
+
+            var zarflizemin = document.getElementById('zarf');
+            if(zarflizemin.checked == true){
+                ctx.save();
+                var angle24 = Math.floor(Math.random() * 10);
+                var distance = angle24 * 20;
+                ctx.rotate(angle24 * Math.PI / 180);
+
+                ctx.shadowColor = '#000'; // green for demo purposes
+                ctx.shadowBlur = shadowBlur;
+                ctx.shadowOffsetX = shadowOffsetX;
+                ctx.shadowOffsetY = shadowOffsetY;
+                ctx.drawImage(zarf, (canvas.width / 2 - zarf.width / 2)+distance,( canvas.height / 2 - zarf.height / 2 +distance));
+                ctx.rotate(-angle24 * Math.PI / 180);
+                ctx.restore();
+            }
+
+            //ctx.globalAlpha = 0.5;
+            ctx.save();
+            ctx.shadowColor = '#000'; // green for demo purposes
+            ctx.shadowBlur = shadowBlur;
+            ctx.shadowOffsetX = shadowOffsetX;
+            ctx.shadowOffsetY = shadowOffsetY;
+            ctx.rotate(angle * Math.PI / 180);
+            ctx.drawImage(img2, canvas.width / 2 - img2.width / 2, canvas.height / 2 - img2.height / 2 - 50);
+            ctx.rotate(-angle * Math.PI / 180);
+
+            ctx.restore();
+        }
     }
 
     function handleImage(e) {
@@ -186,8 +197,12 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     }
 
     var imagesLoaded = 0;
+    var canvas = document.getElementById("my-canvas");
+    var ctx = canvas.getContext("2d");
+
     var tercih = loadImage('tercih.png', main);
     var zarf =  loadImage('zarf.png', main);
+
     var wood1 = loadImage('wood1.jpg', main);
     var wood2 = loadImage('wood2.jpg', main);
     var wood3 = loadImage('wood3.jpg', main);
@@ -198,6 +213,9 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     var wood8 = loadImage('wood8.jpg', main);
     var img2 = loadImage('pusula.png', main);
     var papers = loadImage('paper.png', main);
+
+
+    var golge = document.getElementById('golge');
 
     var shadowBlur = 0;
     var shadowOffsetX = 0;
@@ -213,6 +231,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
 
     var secildi = false;
 
+
     document.addEventListener("DOMContentLoaded", function () {
 
         var imageLoader = document.getElementById('imageLoader');
@@ -221,135 +240,103 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
         var imageLoader2 = document.getElementById('imageLoader2');
         imageLoader2.addEventListener('change', handleImage2, false);
 
+
         canvas.addEventListener('click', function (evt) {
-            console.log(evt);
+
             var rect = canvas.getBoundingClientRect();
             var x = evt.clientX - rect.left;
             var y = evt.clientY - rect.top;
 
+            console.log('x:' + x + ' y:' + y);
             var angle2 = Math.floor(Math.random() * 50);
 
             var isim = document.getElementById('isim').value;
 
             if (secildi == false) {
-                /* tercih */
-                stamp = new Img(x, y, 70, 70, angle2*Math.PI/180, true, tercih);
-                stamp.drawFunc = function(){ drawPlain(stamp); };
+                // draw the image
+                // since the context is rotated, the image will be rotated also
+                ctx.save();
+                ctx.translate(x, y);
+                ctx.rotate(angle2 * Math.PI / 180);
+                ctx.drawImage(tercih, 0, 0, 70, 70);
+                ctx.restore();
                 secildi = true;
             }
             else if (secildi == true && isim != '' && isimResimde == false) {
-                /* name paper */
+                // draw the image
+                // since the context is rotated, the image will be rotated also
+                ctx.save();
+                ctx.translate(x, y);
+
                 var angle3 = Math.floor(Math.random() * 10);
-                paper = new Img(x, y, 300, 100, angle3*Math.PI/180, true, papers);
-                paper.drawFunc = function(){
-                    drawShadow(paper, '#555555', 10);
-                    ctx.save();
-                    ctx.translate(paper.x, paper.y);
-                    ctx.rotate(paper.angle);
-                    ctx.font = '30px "AHundredMiles"';
-                    var isim = document.getElementById('isim').value;
-                    ctx.fillStyle = "#284283";
-                    ctx.fillText(isim, 60, 60);
-                    ctx.restore();
-                };
+                ctx.rotate(angle3 * Math.PI / 180);
+
+                ctx.save();
+                ctx.shadowColor = '#000'; // green for demo purposes
+                ctx.shadowBlur = shadowBlur;
+                ctx.shadowOffsetX = shadowOffsetX;
+                ctx.shadowOffsetY = shadowOffsetY;
+                ctx.drawImage(papers, 0, 0, 300, 100);
+
+                ctx.restore();
+
+                ctx.font = '30px "AHundredMiles"';
+                var isim = document.getElementById('isim').value;
+                ctx.fillStyle = "#284283";
+                ctx.fillText(isim, 60, 60);
+                ctx.restore();
                 isimResimde = true;
             }
             else if (secildi == true && kimlik != null && kimlikResimde == false) {
+                // draw the image
+                // since the context is rotated, the image will be rotated also
+                ctx.save();
+                ctx.translate(x, y);
+
                 var angle3 = Math.floor(Math.random() * 30);
-                idcard = new Img(x, y, 332, 450, angle3*Math.PI/180, true, kimlik);
-                idcard.drawFunc = function(){ drawShadow(idcard, '#000'); };
+                ctx.rotate(angle3 * Math.PI / 180);
+
+                ctx.shadowColor = '#000'; // green for demo purposes
+                ctx.shadowBlur = shadowBlur;
+                ctx.shadowOffsetX = shadowOffsetX;
+                ctx.shadowOffsetY = shadowOffsetY;
+                ctx.drawImage(kimlik, 0, 0, 332, 450);
+
+                ctx.restore();
                 kimlikResimde = true;
             }
             else if (secildi == true && ozel != null && ozelResimde == false) {
+                // draw the image
+                // since the context is rotated, the image will be rotated also
+                ctx.save();
+                ctx.translate(x, y);
+
                 var angle3 = Math.floor(Math.random() * 30);
-                extra = new Img(x, y, ozel.width, ozel.height, angle3*Math.PI/180, true, ozel);
-                extra.drawFunc = function(){ drawShadow(extra, '#000'); };
+                ctx.rotate(angle3 * Math.PI / 180);
+
+                ctx.shadowColor = '#000'; // green for demo purposes
+                ctx.shadowBlur = shadowBlur;
+                ctx.shadowOffsetX = shadowOffsetX;
+                ctx.shadowOffsetY = shadowOffsetY;
+                ctx.drawImage(ozel, 0, 0);
+
+                ctx.restore();
                 ozelResimde = true;
             }
-        drawCanvas();
+
+
         }, false);
-
-        function startDrag(x, y){
-            var i;
-            for (i=0; i<imgs.length; i++) {
-                if (imgs[i].drag == false) continue;
-                var rot = rotatePoint(x - imgs[i].x, y - imgs[i].y, imgs[i].angle*-1);
-                var imageX = rot.x;
-                var imageY = rot.y;
-                if (imageX < 0 || imageX > imgs[i].w || imageY < 0 || imageY > imgs[i].h) continue; /* click is outside image */
-                grab = {};
-                grab.img = imgs[i];
-                grab.origX = imgs[i].x;
-                grab.origY = imgs[i].y;
-                grab.origMouseX = x;
-                grab.origMouseY = y;
-            }
-            drawCanvas();
-        }
-        function drag(x, y){
-            if (grab != null) {
-                grab.img.x = grab.origX - (grab.origMouseX - x);
-                grab.img.y = grab.origY - (grab.origMouseY - y);
-                drawCanvas();
-            }
-        }
-        function endDrag(){
-            grab = null;
-            drawCanvas();
-        }
-
-        canvas.addEventListener('mousedown', function (evt) {
-            var rect = canvas.getBoundingClientRect();
-            startDrag(evt.clientX - rect.left, evt.clientY - rect.top);
-        });
-        canvas.addEventListener('mousemove', function (evt) {
-            var rect = canvas.getBoundingClientRect();
-            drag(evt.clientX - rect.left, evt.clientY - rect.top);
-        });
-        canvas.addEventListener('mouseup', function (evt) {
-            endDrag();
-        });
-
-        canvas.addEventListener('touchstart', function (evt) {
-            var rect = canvas.getBoundingClientRect();
-            startDrag(evt.touches[0].clientX - rect.left, evt.touches[0].clientY - rect.top);
-            evt.preventDefault();
-        });
-        canvas.addEventListener('touchmove', function (evt) {
-            var rect = canvas.getBoundingClientRect();
-            drag(evt.changedTouches[0].clientX - rect.left, evt.changedTouches[0].clientY - rect.top);
-            evt.preventDefault();
-        });
-        canvas.addEventListener('touchend', function (evt) {
-            endDrag();
-            /* send click event anyway */
-            var event = new MouseEvent('click',
-            			{clientX: evt.changedTouches[0].clientX, clientY: evt.changedTouches[0].clientY});
-            canvas.dispatchEvent(event);
-        });
-
-        var golge = document.getElementById('golge');
-        golge.onchange = function () {
-            if (golge.checked) {
-                window.shadowBlur = 5; window.shadowOffsetX = 1; window.shadowOffsetY = 1;
-            } else {
-                window.shadowBlur = 0; window.shadowOffsetX = 0; window.shadowOffsetY = 0;
-            }
-            drawCanvas();
-        };
 
         drawCanvas();
     });
 
     var bastan = document.getElementById("bastan");
     bastan.addEventListener('click', function (evt) {
-        imgs = [];
         secildi = false;
         kimlikResimde = false;
         isimResimde = false;
         ozelResimde = false;
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        main();
         drawCanvas();
     });
 
@@ -365,11 +352,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     });
 
     function drawCanvas() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        var i;
-        for(i=0; i<imgs.length; i++){
-            imgs[i].drawFunc();
-        }
+        main();
     }
 
 </script>
