--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
         imgs = [];
         var angle = Math.floor(Math.random() * 10);
 
-        var bgImgs = [wood1, wood2, wood3, wood4, wood5, wood6, wood7, wood8, wood9, wood10];
+        var bgImgs = [wood1, wood2, wood3, wood4, wood5, wood6, wood7, wood8, wood9, wood10, wood11];
         oybackground = bgImgs[Math.floor(Math.random() * bgImgs.length)];
 
         bg = new Img(-100, -100, oybackground.width, oybackground.height,
@@ -201,6 +201,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     var wood8 = loadImage('wood8.jpg', main);
     var wood9 = loadImage('wood9.jpg', main);
     var wood10 = loadImage('wood10.jpg', main);
+    var wood11 = loadImage('wood11.jpg', main);
     var img2 = loadImage('pusula.png', main);
     var papers = loadImage('paper.png', main);
 
