--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 <body>
 <h1>Oy pusulası fotoğrafı yapıcı</h1>
 <a href="https://www.mynameismidori.com">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır. #HAYIR
+<br><br>
+Destek için:<br><br>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="7N3QMNGG26ZYC">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 <p>
     Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı<br/>
 <ul>
