--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- You should properly set the path from the main file. -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
-    <meta property="og:image" content="https://midorikocak.github.io/pusula/og-image.png"/>
+    <meta property="og:image" content="https://akkermansia.github.io/pusula/og-image.png"/>
     <meta property="og:description"
           content="Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı"/>
-    <meta property="og:url" content="https://midorikocak.github.io/pusula"/>
+    <meta property="og:url" content="https://akkermansia.github.io/pusula"/>
 </head>
 <style>
     @charset "utf-8";
@@ -35,8 +35,8 @@
     }
 </style>
 <body>
-<h1>Oy pusulası fotoğrafı yapıcı 24 Haziran</h1>
-<a href="https://www.mynameismidori.com">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
+<h1>Oy pusulası fotoğrafı yapıcı 14 Mayıs</h1>
+<a href="https://www.twitter.com/midorikocak">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
 #T A M A M
 <br><br>
 Destek için:<br><br>
