--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 <h1>Oy pusulası fotoğrafı yapıcı 14 Mayıs</h1>
 <a href="https://www.twitter.com/midorikocak">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
-#T A M A M
+1 Oy Kemal'e 1 Oy Tip'e
 <br><br>
 Destek için:<br><br>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
