--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <style>
     @charset "utf-8";
+    body{
+        margin: 1rem;
+    }
     @font-face {
         font-family: 'AHundredMiles';
         src: url('AHundredMiles.ttf');
