--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- You should properly set the path from the main file. -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
     <meta property="og:image" content="https://akkermansia.github.io/pusula/og-image.png"/>
     <meta property="og:description"
@@ -82,7 +84,8 @@ Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" n
 Özel kağıt, resim, kartvizit yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader2"
                                                                   name="imageLoader2"/><br/>
 <br>
-Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkbox" id="golge"> Filtre var: <input type="checkbox" id="filterCheck" checked>
+<div class="checkboxes">
+Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkbox" id="golge"> Filtre var: <input type="checkbox" id="filterCheck" checked></div>
 <br>
 <form>
     <p>Pusula Türü:</p>
