--- a/index.html
+++ b/index.html
@@ -303,24 +303,24 @@ Destek için:
 
 
     var imagesLoaded = 0
-    var tercih = loadImage('tercih.png', main)
-    var zarf = loadImage('zarf.png', main)
-    var wood1 = loadImage('wood1.jpg', main)
-    var wood2 = loadImage('wood2.jpg', main)
-    var wood3 = loadImage('wood3.jpg', main)
-    var wood4 = loadImage('wood4.jpg', main)
-    var wood5 = loadImage('wood5.jpg', main)
-    var wood6 = loadImage('wood6.jpg', main)
-    var wood7 = loadImage('wood7.jpg', main)
-    var wood8 = loadImage('wood8.jpg', main)
-    var wood9 = loadImage('wood9.jpg', main)
-    var wood10 = loadImage('wood10.jpg', main)
-    var wood11 = loadImage('wood11.jpg', main)
-    var filter = loadImage('filter.jpg', main)
-    var cb = loadImage('cb.png', main)
-    var mv = loadImage('milletvekili.png', main);
+    var tercih = loadImage('source/textures/tercih.png', main)
+    var zarf = loadImage('source/textures/zarf.png', main)
+    var wood1 = loadImage('source/textures/wood/wood1.jpg', main)
+    var wood2 = loadImage('source/textures/wood/wood2.jpg', main)
+    var wood3 = loadImage('source/textures/wood/wood3.jpg', main)
+    var wood4 = loadImage('source/textures/wood/wood4.jpg', main)
+    var wood5 = loadImage('source/textures/wood/wood5.jpg', main)
+    var wood6 = loadImage('source/textures/wood/wood6.jpg', main)
+    var wood7 = loadImage('source/textures/wood/wood7.jpg', main)
+    var wood8 = loadImage('source/textures/wood/wood8.jpg', main)
+    var wood9 = loadImage('source/textures/wood/wood9.jpg', main)
+    var wood10 = loadImage('source/textures/wood/wood10.jpg', main)
+    var wood11 = loadImage('source/textures/wood/wood11.jpg', main)
+    var filter = loadImage('source/textures/filter.jpg', main)
+    var cb = loadImage('source/textures/cb.png', main)
+    var mv = loadImage('source/textures/milletvekili.png', main);
     var img2 = cb
-    var papers = loadImage('paper.png', main)
+    var papers = loadImage('source/textures/paper.png', main)
 
     var shadowBlur = 0
     var shadowOffsetX = 0
