--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="style.css">
     <script src = "script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
-
 </head>
 <style>
 </style>
@@ -26,9 +25,15 @@
             <a id = "twitterLink" href="https://www.twitter.com/midorikocak" target = "_blank">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
             <p style="margin:0px;font-size:14px;">(1 Oy Kemal'e 1 Oy Tip'e)</p>
         </div>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="7N3QMNGG26ZYC">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
         <div>
-            <a id = "twitterLink" href = "https://twitter.com/BioKZM" target = "_blank">BioKZM</a> tarafından tasarlandı.
-            <p style="margin:0px;font-size:14px;">(1 Oy İnce'ye 1 Oy İYİP'e)</p>
+            BioKZM tarafından tasarlandı.
+            <p style="margin:0px;font-size:14px;">(1 Oy Kemal'e 1 Oy Tip'e)</p>
         </div>
     </div>
 
