--- a/index.html
+++ b/index.html
@@ -74,28 +74,8 @@
         </div>
         
     </div>
-    <div id = "filterDiv">
-        <div id = "envDiv" class = "flexMargin">
-            <p>Zarflı zemin</p>
-            <label for = "zarf">
-                <img id = "emptySquare" src = "/source/textures/square-small.png" onclick="checkBox(this)">
-            </label> 
-            <input type="checkbox" class = "displayNone" id="zarf">
-        </div> 
-        <div class = "flexMargin">
-            <p>Gölge var</p>
-            <label for = "golge">
-                <img id = "emptySquare" src = "/source/textures/square-small.png" onclick="checkBox(this)">
-            </label> 
-            <input type="checkbox" class = "displayNone" id="golge">
-        </div>
-        <div>
-            <p>Filtre var</p>
-            <label for = "filterCheck">
-                <img id = "emptySquare" src = "/source/textures/square-small.png" onclick="checkBox(this)">
-            </label> 
-            <input type="checkbox" class = "displayNone" id="filterCheck" checked >
-        </div>
+    <div class="checkboxes">
+Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkbox" id="golge"> Filtre var: <input type="checkbox" id="filterCheck" checked>
     </div>
 
     <div id = "formDiv">
