remove style tags

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     <script src = "script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
 </head>
-<style>
-</style>
+
 <body>
     <div id = "titleDiv">
-        <div style = "margin-bottom:40px;">
-            <h1 style = "letter-spacing: 2px;">Oy pusulası fotoğrafı yapıcı 14 Mayıs</h1>
+        <div >
+            <h1 >Oy pusulası fotoğrafı yapıcı 14 Mayıs</h1>
             <a id = "twitterLink" href="https://www.twitter.com/midorikocak" target = "_blank">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
-            <p style="margin:0px;font-size:14px;">(1 Oy Kemal'e 1 Oy Tip'e)</p>
+            <p>(1 Oy Kemal'e 1 Oy Tip'e)</p>
         </div>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
@@ -31,14 +30,11 @@
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
-        <div>
-            BioKZM tarafından tasarlandı.
-        </div>
     </div>
 
 
     <div id = "descriptionDiv">
-        <p style = "font-size:25px;">Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı</p>
+        <p>Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı</p>
         <div>
             <p><img id = "envelope" src="/source/textures/envelope.png"> Oy vermek için pusulanın üzerine tıklayın.</p>
         </div>
@@ -66,7 +62,7 @@
         </div>
         <div id = "imageUploader">
             <p id = "uploaderText">Özel kağıt, resim, kartvizit yüklemek için (İsteğe bağlı): </p>
-            <label for = "imageLoader2" class = "idUploaderLabel" style = "margin-bottom:20px;">
+            <label for = "imageLoader2" class = "idUploaderLabel" >
                 <img id = "addImage" src ="/source/textures/file-upload.png"> Dosya Seç!
             </label>
             <input type="file" id="imageLoader2" name="imageLoader2"/>
@@ -98,7 +94,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
         </form>
     </div>
     <div id = "nameDiv">
-        <p style = "font-size: 18px; letter-spacing: 1px;">İsminiz (İsteğe bağlı)</p>
+        <p>İsminiz (İsteğe bağlı)</p>
         <div>
             <input class = "isimInputBox" type="text" id="isim" placeholder="İsim">
             <a id="indir">İndir</a>
@@ -110,7 +106,7 @@ Zarflı zemin: <input type="checkbox" id="zarf"> Gölge var: <input type="checkb
     </div>
     
 
-    <div style = "margin-bottom:50px;">
+    <div>
         <canvas id="my-canvas" width="800" height="600"></canvas>
     </div>
 Destek için:
